--- a/less/footer.less
+++ b/less/footer.less
@@ -25,10 +25,11 @@
 		color: #b0b0b0;
 
 		@media @mobile {
-			width: 100%;
-			text-align: center;
-			margin-top: 20px;
-			margin-bottom: 30px;
+			line-height: 0;
+			// width: 100%;
+			// text-align: center;
+			// margin-top: 20px;
+			// margin-bottom: 30px;
 		}
 	}
 
