--- a/less/social-enter.less
+++ b/less/social-enter.less
@@ -31,15 +31,15 @@
 	}
 
 	&__soc--fb {		
-		background-image: url('../img/facebook.png');
+		background-image: url('../img/social-icons/facebook.png');
 	}
 
 	&__soc--vk {		
-		background-image: url('../img/vk.png');
+		background-image: url('../img/social-icons/vk.png');
 	}
 
 	&__soc--tw {		
-		background-image: url('../img/twitter.png');
+		background-image: url('../img/social-icons/twitter.png');
 	}
 }
 
