--- a/less/tabs.less
+++ b/less/tabs.less
@@ -36,11 +36,32 @@
 		justify-content: space-between;
 		align-items: center;
 		width: 200px;
+	}
+
+	&__provider {
+		font-family: SFUIMedium;
+		font-size: 14px;
+	}
+
+	@media @tablet {
+
+		&__select-form {
+			width: 100%;
+		}
+	}
+
+	.jq-selectbox__select {
+		position: relative;
+		width: 100%;
+		padding-top: 25px;
+		padding-right: 45px;
+		padding-bottom: 25px;
+		padding-left: 10px;
 
 		&::after {
 			content: '';
 			position: absolute;
-			top: 25px;
+			top: 22px;
 			right: 10px;
 			width: 12px;
 			height: 12px;
@@ -59,37 +80,42 @@
 			}
 		}
 	}
-
-	&__provider {
-		font-family: SFUIMedium;
-		font-size: 14px;
+	.jq-selectbox__select-text {
+		display: block;
+		width: 100%;
 	}
-
-	&__select {
-		position: relative;
-		padding-top: 28px;
-		padding-right: 35px;
-		padding-bottom: 25px;
-		padding-left: 10px;
-		border: none;
-		background-color: #232323;
-		font-family: SFUIMedium;
-		font-size: 14px;
+	.jq-selectbox__dropdown {
+		box-sizing: border-box;
+		width: 100%;
+		padding-left: 0;
+		background: #232323;
+	}
+	.jq-selectbox ul {
+		margin: 0;
+		padding: 0;
+	}
+	.jq-selectbox li {
+		min-height: 18px;
+		padding: 5px 12px;
 		color: #fff;
-		cursor: pointer;
-		outline: none;
-
-		&:hover {
-			background-color: #ed383f;
-			transition: 0.1s;
-		}
+		transition: 0.1s;
 	}
-
-	@media @tablet {
-
-		&__select-form {
-			width: 100%;
-		}
+	.jq-selectbox li.selected {
+		background-color: #e8e8e8;
+		color: #000;
+	}
+	.jq-selectbox li.disabled {
+		color: #bababa;
+	}
+	.jq-selectbox li.disabled:hover {
+		color: #d5d5d5;
+	}
+	.jq-selectbox li:hover {
+		background-color: #e8e8e8;
+		color: #000;
+	}
+	.jq-selectbox li.option {
+		padding-left: 25px;
 	}
 }
 
