--- a/less/fixed-bar.less
+++ b/less/fixed-bar.less
@@ -215,19 +215,22 @@
 		}
 	}
 
+	form {
+		img {
+			margin-top: -3px;
+			margin-right: 5px;
+			margin-left: 20px;
+			vertical-align: middle;
+		}
+	}
+
 	&__language {
 		height: 50px;
 		margin-left: 1px;
-		padding-left: 55px;
-		padding-top: 10px;
-		padding-bottom: 10px;
 		border: none;
 		background-color: #313131;
-		background-image: url('../img/flag-russian.png');
-		background-position: 19px 15px;
 		font-family: SFUIRegular;
 		color: #999999;
-		cursor: pointer;
 		transition: 0.1s;
 
 		&:hover {
@@ -281,6 +284,56 @@
 
 	.fixed-bar__shower {
 		display: none;
+	}
+	
+
+	.jq-selectbox {
+		width: 120px;
+		display: inline-block;
+		font-family: SFUIRegular;
+		font-size: 14px;
+	}
+	.jq-selectbox__select {
+		position: relative;
+		width: 100%;
+		padding: 16px;
+	}
+	.jq-selectbox__select-text {
+		display: block;
+		width: 100%;
+	}
+	.jq-selectbox__dropdown {
+		box-sizing: border-box;
+		width: 100%;
+		padding-left: 0;
+		background: #232323;
+	}
+	.jq-selectbox ul {
+		margin: 0;
+		padding: 0;
+	}
+	.jq-selectbox li {
+		min-height: 18px;
+		padding: 5px 12px;
+		color: #fff;
+		transition: 0.1s;
+	}
+	.jq-selectbox li.selected {
+		background-color: #e8e8e8;
+		color: #000;
+	}
+	.jq-selectbox li.disabled {
+		color: #bababa;
+	}
+	.jq-selectbox li.disabled:hover {
+		color: #d5d5d5;
+	}
+	.jq-selectbox li:hover {
+		background-color: #e8e8e8;
+		color: #000;
+	}
+	.jq-selectbox li.option {
+		padding-left: 25px;
 	}
 }
 
