--- a/less/slider.less
+++ b/less/slider.less
@@ -1,5 +1,7 @@
 .slide {
 	position: relative;
+	display: flex;
+	align-items: center;
 
 	&__image-wrapper {
 		width: 100%;
@@ -160,6 +162,16 @@
 			width: auto;
 			padding: 8px 10px;
 		}
+	}
+
+	&__content-wrapper {
+		position: absolute;
+		top: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		height: 100%;
 	}
 }
 
