--- a/less/games.less
+++ b/less/games.less
@@ -30,6 +30,7 @@
 		@media @tablet {
 			flex-wrap: wrap;
 			width: 748px;
+			padding-bottom: 40px;
 		}
 
 		@media @mobile {
@@ -45,11 +46,11 @@
 
 		@media @tablet {
 			width: 100%;
+			margin-bottom: 20px;
 		}
 
 		@media @mobile {
 			flex-wrap: wrap;
-			margin-bottom: 0;
 		}
 	}
 
@@ -99,12 +100,10 @@
 
 		@media @tablet {
 			width: 100%;
-			margin-bottom: 30px;
 		}
 
 		@media @mobile {
 			margin: 0 auto;
-			margin-bottom: 30px;
 		}
 	}
 
@@ -124,6 +123,16 @@
 			margin-right: 20px;
 
 			&::last-child {
+				margin-right: 0;
+			}
+		}
+
+		@media @tablet {
+			justify-content: space-between;
+			width: 150px;
+			margin: 0 auto;
+
+			a {
 				margin-right: 0;
 			}
 		}
