--- a/less/day-slot.less
+++ b/less/day-slot.less
@@ -1,4 +1,4 @@
-.slot-of-day-image {
+.day-slot-image {
 	width: 100%;
 
 	@media @mobile {
@@ -18,7 +18,7 @@
 	}
 }
 
-.slot-of-day {
+.day-slot {
 	background-image: url('../img/money-bg-2.png');
 	background-size: contain;
 
