--- a/less/style.less
+++ b/less/style.less
@@ -28,4 +28,4 @@
 @import "cashback.less";
 @import "bonus-more.less";
 @import "social-enter.less";
-@import "slot-of-day.less";
+@import "day-slot.less";
