free spins page

--- a/less/registration.less
+++ b/less/registration.less
@@ -132,7 +132,7 @@
 		padding-top: 15px;
 		padding-bottom: 0;
 
-		@media @mobile {
+		@media @tablet {
 			flex-wrap: wrap;
 		}
 	}
@@ -154,7 +154,7 @@
 		@media @tablet {
 			left: 0;
 			width: auto;
-			max-width: 100%;
+			width: 450px;
 			padding: 10px;
 			margin-bottom: 10px;
 
@@ -171,69 +171,21 @@
 				font-size: 30px;
 			}
 		}
+
+		@media @mobile {
+			width: 100%;
+		}
+	}
+
+	@media @tablet {
+		.registration__reg-button {
+			max-width: 100%;
+		}
 	}
 
 	@media @mobile {
 		.registration__reg-button {
-			width: 50%;
+			padding: 8px 10px;
 		}
 	}
 }
-
-// .registration--slide {
-// 	position: absolute;
-// 	top: ~"calc(50% - 200px)";
-// 	left: ~"calc(50% - 600px)";
-// 	width: 1200px;
-// 	background-image: none;
-
-// 	@media @tablet {
-// 		top: 0;
-// 	}
-
-// 	.registration__wrapper {
-// 		display: flex;
-// 		align-items: center;
-// 		padding-top: 30px;
-// 		padding-bottom: 30px;
-// 		margin: 0 auto;
-
-// 		@media @tablet {
-// 			padding-top: 20px;
-// 			padding-bottom: 20px;
-// 		}
-// 	}
-
-// 	.registration__character-wrapper {
-// 		top: 0;
-// 		left: 400px;
-// 		width: 400px;
-// 	}
-
-// 	.registration-bonus {
-// 		top: 0;
-// 		left: 100px;
-// 		width: 480px;
-// 		padding-top: 30px;
-// 		padding-right: 100px;
-// 		padding-bottom: 30px;
-
-// 		@media @tablet {
-// 			left: 0;
-// 			padding: 20px;
-
-// 			&__header {
-// 				font-size: 16px;
-// 			}
-
-// 			&__underheader {
-// 				font-size: 20px;
-// 				line-height: 25px;
-// 			}
-
-// 			&__count {
-// 				font-size: 30px;
-// 			}
-// 		}
-// 	}
-// }
