--- a/css/style.css
+++ b/css/style.css
@@ -290,8 +290,17 @@ form * {
   font-size: 60px;
   text-transform: uppercase;
 }
+.slide__button-wrapper {
+  position: absolute;
+  bottom: 15px;
+  width: 100%;
+  text-align: center;
+}
 .slide__button {
+  display: block;
   font-family: SFUIMedium;
+  max-width: 170px;
+  margin: 0 auto;
   padding: 25px 40px;
   background-color: #ed383f;
   font-size: 16px;
@@ -3044,6 +3053,109 @@ form * {
 .cashback-game__button:hover {
   background-color: #de3137;
 }
+.free-spins-image {
+  width: 100%;
+}
+.free-spins-image__inner {
+  width: 100%;
+}
+.free-spins__wrapper {
+  position: relative;
+  width: 1180px;
+  margin: 0 auto;
+  padding-top: 100px;
+  padding-bottom: 120px;
+  background-size: contain;
+}
+.free-spins__header-wrapper {
+  width: 700px;
+}
+.free-spins__header {
+  font-size: 45px;
+  line-height: 74px;
+  font-family: SFUIHeavy;
+  text-transform: uppercase;
+}
+.free-spins__underheder-text {
+  font-size: 18px;
+  line-height: 31px;
+}
+.free-spins__coin-image-wrapper {
+  position: absolute;
+  top: 25px;
+  right: 0;
+}
+.free-spins__coin-image {
+  width: 100%;
+}
+.statistics {
+  background-size: contain;
+}
+.statistics__wrapper {
+  width: 1180px;
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 140px;
+}
+.statistics__columns-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 80px;
+}
+.statistics__column {
+  position: relative;
+  width: 25%;
+  text-align: center;
+}
+.statistics__column::after {
+  content: '';
+  position: absolute;
+  top: 10px;
+  right: 0;
+  width: 1px;
+  height: 45px;
+  background-color: #6c6565;
+}
+.statistics__column:last-child::after {
+  display: none;
+}
+.statistics__number {
+  display: block;
+  font-size: 60px;
+  font-family: SFUIHeavy;
+}
+.statistics__col-text {
+  display: block;
+  width: 175px;
+  margin: 0 auto;
+  font-size: 14px;
+  line-height: 23px;
+}
+.statistics__button-wrapper {
+  margin-bottom: 55px;
+  width: 100%;
+  text-align: center;
+}
+.statistics__button {
+  width: 280px;
+  padding: 20px;
+  background-color: #ed383f;
+  font-family: SFUIMedium;
+  font-size: 16px;
+}
+.statistics__button:hover {
+  background-color: #de3137;
+}
+.statistics__text-wrapper {
+  width: 980px;
+  margin: 0 auto;
+}
+.statistics__text {
+  font-size: 14px;
+  line-height: 25px;
+  color: #cccccc;
+  text-align: center;
+}
 @media (min-width: 788px) {
   .main-wrapper {
     margin-top: 77px;
@@ -3165,14 +3277,15 @@ form * {
   .slide__wrapper {
     width: 748px;
   }
-  .slide__text {
-    width: 300px;
-  }
   .slide__upper-text {
     font-size: 25px;
   }
   .slide__header {
     font-size: 40px;
+  }
+  .slide__button-wrapper .slide__button {
+    padding: 20px;
+    bottom: 10px;
   }
   .slide__form-bg {
     width: calc(50% + 100px);
@@ -3424,10 +3537,13 @@ form * {
     padding: 30px;
     text-align: center;
   }
+  .registration--slide .registration__wrapper {
+    flex-wrap: wrap;
+  }
   .registration--slide .registration-bonus {
     left: 0;
     width: auto;
-    max-width: 100%;
+    width: 450px;
     padding: 10px;
     margin-bottom: 10px;
   }
@@ -3440,6 +3556,9 @@ form * {
   }
   .registration--slide .registration-bonus__count {
     font-size: 30px;
+  }
+  .registration--slide .registration__reg-button {
+    max-width: 100%;
   }
   .greeting-bonus__wrapper {
     justify-content: space-around;
@@ -3482,6 +3601,29 @@ form * {
   }
   .cashback-games__wrapper {
     width: 748px;
+  }
+  .free-spins__wrapper {
+    width: 748px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .free-spins__header-wrapper {
+    width: 500px;
+  }
+  .free-spins__header {
+    margin-bottom: 20px;
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .free-spins__coin-image-wrapper {
+    width: 200px;
+  }
+  .statistics__wrapper {
+    width: 748px;
+    padding-bottom: 40px;
+  }
+  .statistics__text-wrapper {
+    width: 100%;
   }
 }
 @media (max-width: 788px) {
@@ -3569,8 +3711,15 @@ form * {
     margin-bottom: 10px;
     font-size: 20px;
   }
+  .slide__button-wrapper {
+    bottom: 5px;
+  }
+  .slide__button-wrapper .slide__button {
+    padding: 8px 10px;
+  }
   .slide__button {
     padding: 8px 10px;
+    max-width: 120px;
   }
   .slide__form-bg {
     width: 100%;
@@ -4006,11 +4155,11 @@ form * {
   .registration-bonus__count {
     font-size: 30px;
   }
-  .registration--slide .registration__wrapper {
-    flex-wrap: wrap;
+  .registration--slide .registration-bonus {
+    width: 100%;
   }
   .registration--slide .registration__reg-button {
-    width: 50%;
+    padding: 8px 10px;
   }
   .greeting-bonus__wrapper {
     width: 100%;
@@ -4147,6 +4296,57 @@ form * {
   .cashback-game__button {
     max-width: 100%;
   }
+  .free-spins-image {
+    position: relative;
+    height: 55vw;
+    overflow: hidden;
+  }
+  .free-spins-image__inner {
+    position: absolute;
+    left: -35%;
+    width: 170%;
+  }
+  .free-spins__wrapper {
+    width: 100%;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .free-spins__header-wrapper {
+    width: 100%;
+    text-align: center;
+  }
+  .free-spins__header {
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .free-spins__coin-image-wrapper {
+    display: none;
+  }
+  .statistics__wrapper {
+    width: 100%;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 0;
+  }
+  .statistics__columns-wrapper {
+    margin-bottom: 40px;
+  }
+  .statistics__column {
+    width: 50%;
+    margin-bottom: 20px;
+  }
+  .statistics__column:nth-child(2n)::after {
+    display: none;
+  }
+  .statistics__col-text {
+    width: 90%;
+  }
+  .statistics__button {
+    max-width: 100%;
+  }
+  .statistics__text {
+    line-height: 20px;
+  }
 }
 @media (max-width: 1220px) and (max-width: 1220px) {
   .main-nav__item--active .main-nav__dropdown {
@@ -4167,5 +4367,13 @@ form * {
   .entry-left__photo-wrapper {
     width: 100%;
     margin-bottom: 30px;
+  }
+}
+@media (max-width: 430px) {
+  .statistics__column {
+    width: 100%;
+  }
+  .statistics__column::after {
+    display: none;
   }
 }
