--- a/less/free-spins.less
+++ b/less/free-spins.less
@@ -19,6 +19,9 @@
 }
 
 .free-spins {
+	background-image: url('../img/hands-card-bg.jpg');
+	background-size: contain;
+	background-position: center top;
 
 	&__wrapper {
 		position: relative;
@@ -26,7 +29,6 @@
 		margin: 0 auto;
 		padding-top: 100px;
 		padding-bottom: 120px;
-		// background-image: url('../img/hands-card-bg.png');
 		background-size: contain;
 
 		@media @tablet {
@@ -54,13 +56,13 @@
 	}
 
 	&__header {
+		margin-bottom: 20px;
 		font-size: 45px;
 		line-height: 74px;
 		font-family: SFUIHeavy;
 		text-transform: uppercase;
 
 		@media @tablet {
-			margin-bottom: 20px;
 			font-size: 30px;
 			line-height: 40px;
 		}
@@ -96,13 +98,14 @@
 }
 
 .statistics {
-	// background-image: url('../img/table-bg.png');
+	background-image: url('../img/table-bg.jpg');
 	background-size: contain;
+	background-position: center 0;
 
 	&__wrapper {
 		width: 1180px;
 		margin: 0 auto;
-		padding-top: 50px;
+		padding-top: 100px;
 		padding-bottom: 140px;
 
 		@media @tablet {
